--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">InstaDemo</string>
+    <string name="_8942">⋮</string>
     <string-array name="arrayMainTab">
         <item>"News Feed"</item>
         <item>"STS"</item>
